# MEGAIMBAPROJECT

./: CMakeLists.txt  README.md  project
include/: admin.h  classroom.h  model.h  pupil.h  teacher.h  user.h
src/: admin.cpp  main.cpp  model.cpp  pupil.cpp  teacher.cpp  user.cpp
